shrink site icon to match font on mobile; attemp to fix iMessage preview issue

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -47,6 +47,10 @@ a {
       font-weight: 700;
       text-decoration: none;
     }
+
+    .site-icon {
+        height: 35px;
+    }
 }
 
 
@@ -65,5 +69,9 @@ a {
       font-weight: 700;
       margin: auto;
       text-decoration: none;
+    }
+
+    .site-icon {
+        height: 25px;
     }
 }
